--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
       </div>
     </div>
     
-    <script src="js/script.js"></script>
+    <script src="js/code.js"></script>
   </body>
 </html>
