--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
       <h1>Random Quotes</h1>
       <button id="load-quote" class="load-quote">Show another quote</button>
     </header>
-
+    <main>
     <div class="container">
       <div id="quote-box" class="quote-box">
+        <script src="js/script.js"></script>
         <p class="quote">Every great developer you know got there by solving problems they were unqualified to solve until they actually did it.</p>
         <p class="source">Patrick McKenzie<span class="citation">Twitter</span><span class="year">2016</span></p>
       </div>
     </div>
     
-    <script src="js/code.js"></script>
+    
+    </main>
   </body>
 </html>
